[package]
name = "html-minify"
publish = false
version = "0.10.3"
description = "Node.js bindings for html-minify"
authors = ["Wilson Lin <npm@wilsonl.in>"]
edition = "2021"

[build]
target = "x86_64-apple-darwin"

[lib]
crate-type = ["cdylib"]

[dependencies]
minify-html = "0.11.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-1"]
